hero section added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
             <h3 class="nav-menu" id="search-in-nav"><i class="ri-search-line"></i></h3>
             <h3 class="nav-menu" id="menu-icon"><i class="ri-menu-3-line"></i></h3>
         </nav>
+
+        <!-- Hero Section -->
+         <div id="hero">
+            <div class="hero-content">
+                <video autoplay loop muted src="./videos/Dior Men's Spring 2025 Campaign Video.mp4"></video>
+            </div>
+            <div id="overlay">
+                <div id="overlay-top">
+                    <h2>photography <br> and films</h2>
+                    <h3>01</h3>
+                </div>
+                <div id="overlay-bottom">
+                    <h4>Explore</h4>
+                    <img src="./images/arrow-50.png" alt="">
+                </div>
+            </div>
+         </div>
     </main>
 </body>
 </html>
