--- a/index.html
+++ b/index.html
@@ -63,6 +63,37 @@
             </div>
             
           </div>
+
+          <!-- Alphabets Section -->
+           <div id="alphabets">
+            <h4>All</h4>
+            <h6>a</h6>
+            <h6>b</h6>
+            <h6>c</h6>
+            <h6>d</h6>
+            <h6>e</h6>
+            <h6>f</h6>
+            <h6>g</h6>
+            <h6>h</h6>
+            <h6>i</h6>
+            <h6>j</h6>
+            <h6>k</h6>
+            <h6>l</h6>
+            <h6>m</h6>
+            <h6>n</h6>
+            <h6>o</h6>
+            <h6>p</h6>
+            <h6>q</h6>
+            <h6>r</h6>
+            <h6>s</h6>
+            <h6>t</h6>
+            <h6>u</h6>
+            <h6>v</h6>
+            <h6>w</h6>
+            <h6>x</h6>
+            <h6>y</h6>
+            <h6>z</h6>
+           </div>
     </main>
 </body>
 </html>
