--- a/index.html
+++ b/index.html
@@ -94,6 +94,20 @@
             <h6>y</h6>
             <h6>z</h6>
            </div>
+
+           <!-- Page2 -->
+            <div id="page2">
+                <div id="page2-part1">
+                    <img src="https://plus.unsplash.com/premium_photo-1669951582302-d0daa33adf6d?q=80&w=1964&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                </div>
+                <div id="page2-part2">
+                    <img src="https://plus.unsplash.com/premium_photo-1669951867055-02d679129190?q=80&w=1965&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+                    <div id="part2-text">
+                        <h2>Hannah Brocker features in a fashion story in the studio for Vogue new shots</h2>
+                        <p>Such exposure to the fashion and beauty industries enabled her passion for branding and creativity to transition from one side of the camera to the other.</p>
+                    </div>
+                </div>
+            </div>
     </main>
 </body>
 </html>
