--- a/index.html
+++ b/index.html
@@ -108,6 +108,20 @@
                     </div>
                 </div>
             </div>
+            <!-- Page3 -->
+             <div id="page3">
+                <h2>VOGUE / SHOT</h2>
+                <div id="page3-content">
+                    <div id="page3-content-part1">
+                        <img src="./images/curved-text.png" alt="">
+                        <img src="./images/arrow.png"  id="arrow" style="width: 100px; height: 100px;" alt="">
+                        <p>Hijab ARTC: memories and culture, <br> the popularistic and futuristic <br>fashion awareness: Shirin Sazi look. </p>
+                    </div>
+                    <div id="page3-content-part2">
+                        <img src="https://media.istockphoto.com/id/1437288512/photo/beautiful-muslim-woman-in-fashinable-dress-with-hijab-isolated-on-modern-cyan-background.jpg?s=2048x2048&w=is&k=20&c=Z6xHvQmmR7F_-VOdHbsm65LTPTf_twMKVPU0b6k9voo=" alt="">
+                    </div>
+                </div>
+             </div>
     </main>
 </body>
 </html>
